<resources>
    <string name="app_name">khushal_s_application</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="facebook_app_id"/>
    <string name="fb_login_protocol_scheme">fb</string>
    <string name="facebook_client_token"/>
<string name="msg_wilson_caspere">wilson.caspere@bernice.info</string>
<string name="lbl_tuna">Tuna </string>
<string name="lbl_satay">Satay</string>
<string name="msg_notification_pr">Notification Preferences</string>
<string name="lbl_enter_feedback">Enter feedback</string>
<string name="lbl_245_reviews2">245 reviews</string>
<string name="lbl_club_sandwich">Club Sandwich</string>
<string name="msg_cinnamon_roll_b">Cinnamon Roll Bunnies</string>
<string name="lbl_sandwich">Sandwich</string>
<string name="msg_all_american_su">all-American summertime special</string>
<string name="lbl_spring_roll">Spring Roll</string>
<string name="msg_see_all_the_pla">See all the places you\u2019ve added so far</string>
<string name="lbl_phone_number">Phone Number</string>
<string name="msg_tell_us_what_yo">Tell us what you love about the app, or what we could 
be doing better.  </string>
<string name="msg_tartufini_avoc">tARTUFINI  AVOCADO E CIOCCOLATO</string>
<string name="lbl_426_46rs">426.46rs</string>
<string name="lbl_50"> +50</string>
<string name="msg_doorstep_singa">doorstep, Singapore</string>
<string name="msg_define_what_ale">Define what alerts and notifications you </string>
<string name="msg_choose_your_cou">Choose your country</string>
<string name="lbl_contact">Contact</string>
<string name="lbl_mexican">Mexican</string>
<string name="lbl_cake_bakery">Cake Bakery</string>
<string name="lbl_kimchi">Kimchi</string>
<string name="msg_trending_this_w">Trending this week</string>
<string name="msg_to_change_your">To change your email, please login through our website, 
and go to the settings section. in case you face any 
difficulties feel free to contact us at help@localfood.com</string>
<string name="lbl_total_carbs">total carbs</string>
<string name="msg_churro_ice_crea">Churro ice-cream bowls</string>
<string name="lbl_180rs">180rs</string>
<string name="lbl_singapore_hotel">Singapore hotel</string>
<string name="lbl_426_56">426.56</string>
<string name="lbl_thai_s_classic">Thai\u2019s Classic </string>
<string name="lbl_divino_fog_o">Divino Fogão</string>
<string name="lbl_tteokbokki">Tteokbokki</string>
<string name="msg_sri_wedari_soek">Sri Wedari Soekarno</string>
<string name="msg_authentic_itali">Authentic Italian Spaghetti</string>
<string name="msg_facing_issues_w">Facing issues with the app?</string>
<string name="lbl_34_reviews">34 Reviews</string>
<string name="msg_report_issues_w">Report issues with the app</string>
<string name="msg_95_kelampok_kas">95 Kelampok Kasri 4037 </string>
<string name="lbl_and_be_happy">and be happy</string>
<string name="msg_order_with_easy">Order with easy your meal
from your favorite
restaurants </string>
<string name="lbl_burger">Burger</string>
<string name="lbl_surat">Surat</string>
<string name="lbl_pasta">Pasta </string>
<string name="msg_sign_in_with_fa">Sign in with Facebook</string>
<string name="lbl_29_restaurants">29 Restaurants</string>
<string name="lbl_corn_dogs">Corn Dogs</string>
<string name="msg_back_to_setting">Back to settings</string>
<string name="lbl_password">Password</string>
<string name="lbl_select_location">Select location</string>
<string name="lbl_bar">Bar</string>
<string name="lbl_burger_syahdu">Burger Syahdu</string>
<string name="msg_notification_se">Notification settings</string>
<string name="lbl_birthday">Birthday</string>
<string name="lbl_want_to_see">want to see</string>
<string name="lbl_tax_fees">Tax &amp;Fees</string>
<string name="lbl_aferican">Aferican </string>
<string name="lbl_american">American</string>
<string name="lbl_singapore">Singapore</string>
<string name="lbl_restaurant">Restaurant</string>
<string name="lbl_benihana">Benihana</string>
<string name="lbl_cake_shop">Cake shop</string>
<string name="lbl_alcohol_served">Alcohol Served </string>
<string name="lbl_haley">Haley</string>
<string name="lbl_main_card">Main card </string>
<string name="lbl_200rs">200rs</string>
<string name="msg_you_have_t_adde">You have\u2019t added any restaurants yet.</string>
<string name="msg_your_account_wa">Your account was successfully deleted</string>
<string name="lbl_245_reviews">(245 reviews)</string>
<string name="lbl_lowest_first">Lowest First</string>
<string name="lbl_fried">Fried</string>
<string name="lbl_soup_beet_vegy">Soup Beet Vegy</string>
<string name="lbl_indonesia">Indonesia</string>
<string name="msg_pasta_hub_itali">Pasta hub,Italian food</string>
<string name="lbl_natilla_receta">Natilla Receta</string>
<string name="lbl_a_taco_so">A Taco So </string>
<string name="msg_additional_filt">Additional Filters</string>
<string name="lbl_near_by">Near by</string>
<string name="msg_order_from_500r">Order from 500rs ; 30 min delivery</string>
<string name="lbl_your_location2">Your location</string>
<string name="msg_fields_marked">Fields marked * are mandatory</string>
<string name="lbl_collections">Collections</string>
<string name="lbl_chill">Chill</string>
<string name="lbl_got_time_for">Got time for</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_send">Send</string>
<string name="lbl_15"> +15</string>
<string name="lbl_roti_prata">Roti Prata</string>
<string name="lbl_privacy_policy">Privacy Policy</string>
<string name="msg_the_app_is_not">The app is not working properly</string>
<string name="msg_curry_noodle_so2">Curry noodle soup</string>
<string name="lbl_toast">Toast</string>
<string name="msg_contact_localfo">Contact Localfood support</string>
<string name="msg_too_many_commun">Too many communications from us?</string>
<string name="lbl_success">Success!</string>
<string name="lbl_mediterranean">Mediterranean</string>
<string name="lbl_singapore_today">Singapore Today</string>
<string name="msg_activate_all_no">Activate all notifications  </string>
<string name="lbl_brigadeiro">Brigadeiro</string>
<string name="lbl_enjoy">Enjoy</string>
<string name="msg_1_apr_2023_3_5">1 Apr 2023- 3.50 PM</string>
<string name="msg_84_gading_semol">84 Gading semolok</string>
<string name="lbl_outdoor_seating">Outdoor seating</string>
<string name="lbl_spain">Spain</string>
<string name="lbl_iraq">Iraq</string>
<string name="msg_delete_your_acc2">delete your account</string>
<string name="lbl_burger_shop">Burger Shop</string>
<string name="lbl_push">Push</string>
<string name="msg_sushi_japan_f">Sushi, japan, Fresh food</string>
<string name="msg_curry_noodle_so">curry noodle soup</string>
<string name="lbl_fries">Fries</string>
<string name="lbl_add">Add</string>
<string name="msg2">**** **** **** 3461</string>
<string name="lbl_cool">Cool</string>
<string name="lbl_momos">Momos</string>
<string name="msg_25_apr_2023_6">25 Apr 2023- 6.27 PM</string>
<string name="lbl_credit_cards">Credit Cards </string>
<string name="lbl_recent">Recent</string>
<string name="lbl_chinese_today">Chinese Today</string>
<string name="lbl_ok">Ok</string>
<string name="lbl_settings">Settings </string>
<string name="lbl_orders">Orders</string>
<string name="msg_use_current_loc">Use current location</string>
<string name="msg_many_people_und">Many people understand the concept of massive party</string>
<string name="msg_anything_else_y">Anything else you\u2019d like to add? </string>
<string name="msg_orders_and_purc">Orders and purchases</string>
<string name="msg_would_you_rathe">Would you rather delete your account?</string>
<string name="lbl_add_a_place">Add a Place</string>
<string name="msg_moriawase_sashi">Moriawase Sashimi</string>
<string name="lbl_back">Back</string>
<string name="lbl_reviews">Reviews</string>
<string name="lbl_65g">65g</string>
<string name="lbl4">.....</string>
<string name="lbl5">$</string>
<string name="lbl_submit_feedback">Submit feedback</string>
<string name="lbl2">-</string>
<string name="lbl_358_restaurants">358 Restaurants</string>
<string name="msg_i_don_t_want_to2">I don\u2019t want to use localfood anymore</string>
<string name="lbl3">+</string>
<string name="msg_are_you_the_own">Are you the owner or manager?</string>
<string name="msg_if_you_re_worri">If you\u2019re worried about your privacy on Localfood, you
can edit your privacy setting, or contact us if someone 
is bothering you. </string>
<string name="lbl_payment_cards">Payment Cards</string>
<string name="lbl_thai_today">Thai Today</string>
<string name="msg_love_beef_lasag">Love beef lasagna</string>
<string name="lbl_short_by">Short by</string>
<string name="lbl_featured">Featured</string>
<string name="lbl_jamaica">Jamaica</string>
<string name="lbl_150rs">150rs</string>
<string name="lbl_happy">Happy</string>
<string name="lbl_order">Order</string>
<string name="lbl_60_52"> +60.52</string>
<string name="lbl_korean">Korean</string>
<string name="lbl_notifications">Notifications</string>
<string name="lbl_soup_beet_vegy2">Soup Beet Vegy </string>
<string name="msg_chinese_dumplin">chinese dumplings</string>
<string name="lbl_indians_cafe">Indians cafe</string>
<string name="msg_classical_cabba">Classical cabbage kimchi</string>
<string name="lbl_cake_shop2">cake shop</string>
<string name="lbl_onion_cheese">Onion Cheese</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="lbl_spain_today">Spain Today</string>
<string name="lbl_sign_up_to_join">Sign up to join</string>
<string name="lbl_are_you_sure">Are you sure ?</string>
<string name="msg_order_from_the">Order from the best local restaurants </string>
<string name="lbl_cancel">Cancel</string>
<string name="lbl_54_restaurants">54 Restaurants</string>
<string name="msg_account_setting2">Account settings</string>
<string name="lbl_acai_bowl">Acai Bowl</string>
<string name="lbl_tteokbokki2">Tteokbokki </string>
<string name="msg_we_only_access">We only access your location while you are using the app</string>
<string name="lbl_edit_profile">Edit profile</string>
<string name="lbl_nearest_first">Nearest First </string>
<string name="lbl_pasta_holiday">Pasta Holiday</string>
<string name="lbl_save_changes">Save Changes</string>
<string name="lbl_400">400ऑ</string>
<string name="lbl_brazil">Brazil</string>
<string name="lbl_50g">50g</string>
<string name="msg_add_about_the_r">add about the restaurant? Mention it here....</string>
<string name="msg_type_location">Type  location you want...</string>
<string name="msg_delete_my_accou">Delete my account now</string>
<string name="msg_muffin_tin_mini">Muffin Tin Mini Quiche </string>
<string name="lbl_special">Special</string>
<string name="lbl_nutrition">Nutrition</string>
<string name="msg_2_pcs_tuna_sash">2 pcs tuna sashimi, 4 pcs california, 1 sc unagi, 1 pcs abi</string>
<string name="lbl_mozza_cheese">Mozza cheese</string>
<string name="lbl_email">Email</string>
<string name="lbl_sashimi_deluxe">Sashimi Deluxe</string>
<string name="lbl_franch_fries">Franch Fries</string>
<string name="msg_have_an_account">Have an account? Sign in  </string>
<string name="msg_9_apr_2023_3_2">9 Apr 2023- 3.27 PM</string>
<string name="msg_by_clicking_sig">By clicking sign up, you will create an account and agree to ours Terms of Service and Privacy Policy</string>
<string name="lbl_protein">Protein</string>
<string name="lbl_250gm">250gm</string>
<string name="lbl_brooks_motor">Brooks Motor</string>
<string name="msg_green_raint_cak">Green Raint Cake</string>
<string name="lbl_welcome_user">Welcome
user</string>
<string name="lbl_1500rs">1500rs</string>
<string name="lbl_fat">Fat</string>
<string name="lbl_river_bamboo">River &amp; Bamboo</string>
<string name="lbl_big_double">Big Double</string>
<string name="lbl_name">Name</string>
<string name="lbl_starbuks">Starbuks</string>
</resources>