<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="springRollRowModel" type="com.khushalsapplication.app.modules.springroll.data.model.SpringRollRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowprotein"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtProtein"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_weight="0.34" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{springRollRowModel.txtProtein}"
            style="@style/txtDMSansmedium17" tools:text="@string/lbl_protein"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFat"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.15" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{springRollRowModel.txtFat}"
            style="@style/txtDMSansmedium17" tools:text="@string/lbl_fat"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTotalcarbs"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_58pxh"
            android:layout_weight="0.51" android:layout_width="0dp"
            android:singleLine="true"
            android:text="@{springRollRowModel.txtTotalcarbs}"
            style="@style/txtDMSansmedium17" tools:text="@string/lbl_total_carbs"/>
    </LinearLayout>
</layout>
