<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpVM" type="com.khushalsapplication.app.modules.signup.data.viewmodel.SignUpVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnwelcomeuser"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_52pxv"
        android:layout_marginEnd="@dimen/_31pxh"
        android:layout_marginStart="@dimen/_35pxh"
        android:layout_marginTop="@dimen/_59pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:gravity="start"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp" android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearSignup"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:gravity="start"
                    android:id="@+id/txtWelcomeuser"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_27pxh"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_width="match_parent"
                    android:text="@{signUpVM.signUpModel.txtWelcomeuser}"
                    style="@style/txtDMSansbold47" tools:text="@string/lbl_welcome_user"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignuptojoin"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_27pxh"
                    android:layout_marginStart="@dimen/_27pxh"
                    android:layout_marginTop="@dimen/_27pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtSignuptojoin}"
                    style="@style/txtDMSansmedium20" tools:text="@string/lbl_sign_up_to_join"/>
                <EditText
                    android:background="@drawable/rectangle_bg_white_a701"
                    android:ellipsize="end"
                    android:hint="@string/lbl_name"
                    android:id="@+id/etGroup152"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_51pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_9pxh"
                    android:paddingTop="@dimen/_9pxv"
                    android:singleLine="true"
                    android:text="@={signUpVM.signUpModel.etGroup152Value}"
                    android:textColorHint="@color/black_900"
                    style="@style/etSolid" tools:ignore="Autofill"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtGroup151"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingStart="@dimen/_10pxh"
                    android:paddingTop="@dimen/_8pxv"
                    android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtGroup151}"
                    style="@style/txtSolid" tools:text="@string/lbl_email"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtGroup150"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingStart="@dimen/_10pxh"
                    android:paddingTop="@dimen/_8pxv"
                    android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtGroup150}"
                    style="@style/txtSolid" tools:text="@string/lbl_password"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSignUp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_6pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_6pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_sign_up"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_sign_up"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtByclickingsig"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_39pxv"
                    android:layout_width="match_parent"
                    android:text="@{signUpVM.signUpModel.txtByclickingsig}"
                    style="@style/txtPoppinsregular13" tools:text="@string/msg_by_clicking_sig"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtConfirmation"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_247pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtConfirmation}"
                    style="@style/txtDMSansmedium16_1" tools:text="@string/msg_have_an_account"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
